# TrussC

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
addons/tcxBox2d/: addon.json
addons/tcxCurl/: CMakeLists.txt  README.md  addon.json
addons/tcxCurl/android/java/com/trussc/tcx/curl/: AndroidHttpClient.java
addons/tcxCurl/android/manifest/: uses.xml
addons/tcxCurl/example-curl/: CMakeLists.txt  addons.make
addons/tcxCurl/example-curl/src/: tcApp.cpp
addons/tcxCurl/src/: tcxCurl.h  tcxCurl_android.cpp
addons/tcxDepthCamera/: CMakeLists.txt  LICENSES.md  README.md  addon.json
addons/tcxDepthCamera/example-synthetic/: CMakeLists.txt  addons.make
addons/tcxDepthCamera/example-synthetic/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxDepthCamera/src/: tcxDepthCamera.h  tcxDepthCameraBase.h  tcxDepthCapabilities.h  tcxDepthCast.h  tcxDepthImage.h  tcxDepthTypes.h  tcxSyntheticDepthCamera.h  tcxThreadedDepthCamera.h
addons/tcxDepthRecord/: .gitignore  CMakeLists.txt  LICENSES.md  README.md  addon.json
addons/tcxDepthRecord/example-record/: CMakeLists.txt  addons.make
addons/tcxDepthRecord/example-record/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxDepthRecord/src/: tcDepthPlayback.h  tcDepthRecordFormat.h  tcDepthRecorder.h  tcxDepthPlayback.h  tcxDepthRecord.h  tcxDepthRecordFormat.h  tcxDepthRecorder.h
addons/tcxGltf/: addon.json
addons/tcxHap/: addon.json
addons/tcxImGui/: CMakeLists.txt  README.md  addon.json
addons/tcxImGui/example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxImGui/src/: tcImGuiHooks.h  tcImGuiTools.h  tcxImGui.h
addons/tcxImGui/src/platform/: imgui_impl_android.cpp  imgui_impl_ios.mm  imgui_impl_mac.mm  imgui_impl_web.cpp  imgui_impl_win.cpp
addons/tcxLua/: CMakeLists.txt  LICENSE  README.md  addon.json
addons/tcxLua/docs/: LICENSE_NOTE.md
addons/tcxLua/example-json-xml/src/: tcApp.cpp
addons/tcxLua/exampleBasic/src/: tcApp.cpp
addons/tcxLua/exampleEasyCam/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleFileReload/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleJsonXml/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleLiveUpdate/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleLuaJITCheck/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleMath/src/: tcApp.cpp
addons/tcxLua/examplePath/src/: tcApp.cpp
addons/tcxLua/exampleSimple/src/: tcApp.cpp
addons/tcxLua/exampleTween/src/: tcApp.cpp
addons/tcxLua/exampleTypes/src/: tcApp.cpp  tcApp.h
addons/tcxLua/include/sol/: config.hpp  forward.hpp  sol.hpp
addons/tcxLua/luajit-cmake/: CMakeLists.txt
addons/tcxLua/src/: tcxLua.cpp  tcxLua.h
addons/tcxLua/tools/apidef-luagen/: .gitignore  README.md  apidef-luagen.js  package.json
addons/tcxLua/tools/bindgen/: .gitignore  README.md  main.py  pyproject.toml
addons/tcxLua/tools/luagen/: .gitignore  README.md  luagen.js
addons/tcxLut/: addon.json
addons/tcxMidi/: CMakeLists.txt  README.md  addon.json
addons/tcxMidi/android/java/dev/celtera/libremidi/: MidiDeviceCallback.java
addons/tcxMidi/android/manifest/: uses.xml
addons/tcxMidi/example-async/: CMakeLists.txt
addons/tcxMidi/example-async/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxMidi/example-basic/android/: AndroidManifest.xml.in
addons/tcxMidi/example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxMidi/example-controller/: CMakeLists.txt
addons/tcxMidi/example-controller/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxMidi/example-keyboard/: CMakeLists.txt
addons/tcxMidi/example-keyboard/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxMidi/src/: tcxMidi.h  tcxMidiApi.h  tcxMidiClock.h  tcxMidiConstants.h  tcxMidiIn.h  tcxMidiMessage.h  tcxMidiOut.h  tcxMidiTimecode.h
addons/tcxNodeInspector/: CMakeLists.txt  LICENSES.md  README.md  addon.json
addons/tcxNodeInspector/example-basic/: addons.make
addons/tcxNodeInspector/example-basic/src/: main.cpp  scene.h  tcApp.cpp  tcApp.h
addons/tcxNodeInspector/example-serialize/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxNodeInspector/src/: tcxNodeInspector.cpp  tcxNodeInspector.h
addons/tcxObj/: addon.json
addons/tcxOsc/: README.md  addon.json
addons/tcxQuadWarp/: addon.json
addons/tcxTls/: CMakeLists.txt  addon.json
addons/tcxTls/cmake/: tcTlsCaBundle.cpp.in
addons/tcxTls/example-tls/src/: main.cpp  tcApp.h
addons/tcxTls/scripts/: update_ca_bundle.sh
addons/tcxTls/src/: tcTlsClient.cpp  tcTlsClient.h
addons/tcxWebSocket/: addon.json
core/: CMakeLists.txt
core/cmake/: trussc_app.cmake  use_addon.cmake
core/include/: TrussC.h  tcBaseApp.h  tcBitmapFont.h  tcMath.h  tcNode.h  tcPlatform.h
core/resources/: Info-iOS.plist.in  Info.plist.in
core/shaders/: fboMipDownsample.glsl  pointCloud.glsl  sglPremult.glsl  videoNV12.glsl
core/tests/: README.md
core/tests/sglLayerUpload/: CMakeLists.txt
docs/: .gitignore  ADDONS.md  AI_AUTOMATION.md  ARCHITECTURE.md  BUILD_SYSTEM.md  FOR_AI_ASSISTANT.md  GEM_TrussC_Assistant.md  GET_STARTED.md  GET_STARTED_CONSOLE_MODE.md  GET_STARTED_RASPBERRY_PI_LITE.md  GET_STARTED_jp.md  LICENSE.md  REFERENCE.md  REFERENCE_REDESIGN.md  ROADMAP.md  SECURITY.md  TrussC_vs_openFrameworks.md  api-definition.yaml  package-lock.json  package.json
docs/reference/: API_INDEX.md  README.md  api-reference.toml  categories.json  check.js  colors.json  emit-dash.js  emit-forai.js  emit-of.js  extras.json  generate.js  mine.js  std-symbols.js  structure.js  wishlist.md  zeal-docgen-guide.md
docs/scripts/: audit-coverage.js  check-i18n.js  emit-web.js  extract-enums.js  gen-colors.js  generate-docs.js  generateDocsForAI.sh  of-category-mapping.js  scan-examples.js
docs/tests/: README.md  coverage-audit.js  coverage-inventory.js  (+1 more)
examples/: build_all.py  build_all.sh
oracle-screen-alpha/: .gitignore  README.md
projectGenerator/: buildProjectGenerator_linux.sh  buildProjectGenerator_mac.command  install_cli_mac.command  install_dependencies_linux.sh
tools/: .gitignore  CMakeLists.txt  addons.make  build_linux.sh  build_mac.command  build_win.bat  install_dependencies_linux.sh
trussc/: CMakeLists.txt
(+486 files in other folders)
